gemini package refactor