@@ -14,37 +14,45 @@ import ca.teamdman.sfml.ast.*;
 import io.netty.buffer.ByteBuf;
 import it.unimi.dsi.fastutil.ints.Int2ObjectArrayMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
+import net.minecraft.inventory.Container;
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.math.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceKey;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.inventory.AbstractContainerMenu;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.World;
+import net.minecraftforge.fml.common.network.simpleimpl.IMessage;
+import net.minecraftforge.fml.common.network.simpleimpl.MessageContext;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.List;
 
-public record ServerboundContainerExportsInspectionRequestPacket(
-        int windowId,
-        BlockPos pos
-) implements SFMPacket {
+public class ServerboundContainerExportsInspectionRequestPacket extends SFMPacket<ServerboundContainerExportsInspectionRequestPacket> {
+    private int windowId;
+    private BlockPos pos;
+
+    public ServerboundContainerExportsInspectionRequestPacket(int windowId, BlockPos pos) {
+        this.windowId = windowId;
+        this.pos = pos;
+    }
+
+    public ServerboundContainerExportsInspectionRequestPacket() {
+    }
+
     public static String buildInspectionResults(
-            Level level,
+            World world,
             BlockPos pos
     ) {
         StringBuilder sb = new StringBuilder();
-        for (Direction direction : SFMDirections.DIRECTIONS_WITH_NULL) {
+        for (EnumFacing direction : SFMDirections.DIRECTIONS_WITH_NULL) {
             sb.append("-- ").append(direction).append("\n");
             int len = sb.length();
             //noinspection unchecked,rawtypes
-            SFMResourceTypes.registry().entries().stream().map(entry -> buildInspectionResults(
+            SFMResourceTypes.registry().getEntries().stream().map(entry -> buildInspectionResults(
                             (ResourceKey) entry.getKey(),
                             entry.getValue(),
-                            level,
+                            world,
                             pos,
                             direction
                     ))
@@ -57,7 +65,7 @@ public record ServerboundContainerExportsInspectionRequestPacket(
         }
 
         if (SFMModCompat.isMekanismLoaded()) {
-//            BlockEntity be = level.getBlockEntity(pos);
+//            TileEntity be = world.getTileEntity(pos);
 //            if (be != null) {
 //                sb.append(SFMMekanismCompat.gatherInspectionResults(be)).append("\n");
 //            }
@@ -69,13 +77,13 @@ public record ServerboundContainerExportsInspectionRequestPacket(
     public static <STACK, ITEM, CAP> String buildInspectionResults(
             ResourceKey<ResourceType<STACK, ITEM, CAP>> resourceTypeResourceKey,
             ResourceType<STACK, ITEM, CAP> resourceType,
-            Level level,
+            World world,
             BlockPos pos,
-            @Nullable Direction direction
+            @Nullable EnumFacing direction
     ) {
         StringBuilder sb = new StringBuilder();
         SFMBlockCapabilityResult<CAP> capResult = SFMBlockCapabilityDiscovery.discoverCapabilityFromLevel(
-                level,
+                world,
                 resourceType.CAPABILITY_KIND,
                 pos,
                 direction
@@ -122,13 +130,13 @@ public record ServerboundContainerExportsInspectionRequestPacket(
                         new LabelAccess(
                                 List.of(new Label("target")),
                                 new DirectionQualifier(direction == null
-                                                       ? EnumSet.noneOf(Direction.class)
-                                                       : EnumSet.of(direction)),
+                                        ? EnumSet.noneOf(EnumFacing.class)
+                                        : EnumSet.of(direction)),
                                 NumberRangeSet.MAX_RANGE,
                                 RoundRobin.disabled()
                         ),
                         new ResourceLimits(
-                                resourceLimitList.stream().distinct().toList(),
+                                resourceLimitList.stream().distinct().collect(java.util.stream.Collectors.toList()),
                                 ResourceIdSet.EMPTY
                         ),
                         false
@@ -139,76 +147,50 @@ public record ServerboundContainerExportsInspectionRequestPacket(
         }
         String result = sb.toString();
         if (!result.isBlank()) {
-            BlockEntity be = level.getBlockEntity(pos);
+            TileEntity be = world.getTileEntity(pos);
             //noinspection DataFlowIssue
             if (be != null && direction == null && SFMWellKnownRegistries.BLOCK_ENTITY_TYPES
-                    .getId(be.getType())
-                    .getNamespace()
+                    .getKey(be.getClass())
+                    .getResourceDomain()
                     .equals("mekanism")) {
                 return "-- "
-                       + LocalizationKeys.CONTAINER_INSPECTOR_MEKANISM_NULL_DIRECTION_WARNING.getStub()
-                       + "\n"
-                       + result;
+                        + LocalizationKeys.CONTAINER_INSPECTOR_MEKANISM_NULL_DIRECTION_WARNING.getStub()
+                        + "\n"
+                        + result;
             }
         }
         return result;
     }
 
-    public static class Daddy implements SFMPacketDaddy<ServerboundContainerExportsInspectionRequestPacket> {
-        @Override
-        public PacketDirection getPacketDirection() {
-            return PacketDirection.SERVERBOUND;
-        }
-
-        @Override
-        public void encode(
-                ServerboundContainerExportsInspectionRequestPacket msg,
-                ByteBuf friendlyByteBuf
-        ) {
-            friendlyByteBuf.writeVarInt(msg.windowId());
-            friendlyByteBuf.writeBlockPos(msg.pos());
-        }
-
-        @Override
-        public ServerboundContainerExportsInspectionRequestPacket decode(ByteBuf friendlyByteBuf) {
-            return new ServerboundContainerExportsInspectionRequestPacket(
-                    friendlyByteBuf.readVarInt(),
-                    friendlyByteBuf.readBlockPos()
-            );
-        }
-
-        @Override
-        public void handle(
-                ServerboundContainerExportsInspectionRequestPacket msg,
-                SFMPacketHandlingContext context
-        ) {
-            context.handleServerboundContainerPacket(
-                    AbstractContainerMenu.class,
-                    BlockEntity.class,
-                    msg.pos,
-                    msg.windowId,
-                    (menu, blockEntity) -> {
-                        assert blockEntity.getLevel() != null;
-                        String payload = buildInspectionResults(blockEntity.getLevel(), blockEntity.getBlockPos());
-                        var player = context.sender();
-
-                        SFMPackets.sendToPlayer(
-                                () -> player, new ClientboundContainerExportsInspectionResultsPacket(
-                                        msg.windowId,
-                                        SFMPacketDaddy.truncate(
-                                                payload,
-                                                ClientboundContainerExportsInspectionResultsPacket.MAX_RESULTS_LENGTH
-                                        )
-                                )
-                        );
-                    }
-            );
-        }
-
-        @Override
-        public Class<ServerboundContainerExportsInspectionRequestPacket> getPacketClass() {
-            return ServerboundContainerExportsInspectionRequestPacket.class;
-        }
+    @Override
+    public void fromBytes(ByteBuf buf) {
+        windowId = buf.readInt();
+        pos = new BlockPos(buf.readInt(), buf.readInt(), buf.readInt());
     }
 
+    @Override
+    public void toBytes(ByteBuf buf) {
+        buf.writeInt(windowId);
+        buf.writeInt(pos.getX());
+        buf.writeInt(pos.getY());
+        buf.writeInt(pos.getZ());
+    }
+
+    @Override
+    public IMessage onMessage(ServerboundContainerExportsInspectionRequestPacket message, MessageContext ctx) {
+        ctx.getServerHandler().player.getServerWorld().addScheduledTask(() -> {
+            Container container = ctx.getServerHandler().player.openContainer;
+            if (container.windowId == message.windowId) {
+                TileEntity be = ctx.getServerHandler().player.world.getTileEntity(message.pos);
+                if (be != null) {
+                    String payload = buildInspectionResults(be.getWorld(), be.getPos());
+                    SFMPackets.SFM_CHANNEL.sendTo(new ClientboundContainerExportsInspectionResultsPacket(
+                            message.windowId,
+                            payload
+                    ), ctx.getServerHandler().player);
+                }
+            }
+        });
+        return null;
+    }
 }
